traces/bug_95.txt
src/medit/mouse.c:86: error: DEAD_STORE
  The value written to &p (type sperspective*) is never used.
Showing all 1 steps of the trace


src/medit/mouse.c:86:3: Write of unused value
84.   
85.     sc = cv.scene[currentScene()];
86.     p  = sc->persp;
        ^
87.   
88.     glEnable(GL_COLOR_LOGIC_OP);
